// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlockSkeleton /> should render a block skeleton 1`] = `
.c1 {
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  border-radius: 4px;
  line-height: 1rem;
  width: 100%;
  height: 1rem;
}

<BlockSkeleton
  showSkeleton={true}
>
  <Styled(styled.span)>
    <styled.span
      className="c0"
    >
      <span
        className="c0 c1"
      />
    </styled.span>
  </Styled(styled.span)>
</BlockSkeleton>
`;

exports[`<BlockSkeleton /> should render a block skeleton with set width and height 1`] = `
.c1 {
  -webkit-animation: jXsTbE .8s linear infinite alternate;
  animation: jXsTbE .8s linear infinite alternate;
  -webkit-backface-visibility: hidden;
  backface-visibility: hidden;
  will-change: opacity;
  background-color: #E1E6EB;
  border: 1px solid #E1E6EB;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c0 {
  border-radius: 4px;
  line-height: 1rem;
  width: 400px;
  height: 200px;
}

<BlockSkeleton
  height={200}
  showSkeleton={true}
  width={400}
>
  <Styled(styled.span)
    height={200}
    width={400}
  >
    <styled.span
      className="c0"
      height={200}
      width={400}
    >
      <span
        className="c0 c1"
        height={200}
        width={400}
      />
    </styled.span>
  </Styled(styled.span)>
</BlockSkeleton>
`;
